Fixed alignments on marking page.

--- a/react-test-project/src/index.css
+++ b/react-test-project/src/index.css
@@ -28,11 +28,12 @@ body {
 
 .box2 {
   border: 1.5px solid #367d36;
-  min-height:80px;
+  min-height:85px;
   text-align:left;
-  padding-left: 15px;
-  padding-top:5px;
-
+  padding:10px 5px 5px 10px;
+  width:89%;
+  float:left;
+  
 }
 
 .rubricItem {
@@ -308,11 +309,12 @@ h2{
 .input-group input, textarea{     
   padding:10px 10px;
   margin-top:10px;
-      
 }
+
 .form-row button {
   padding:10px 10px;
   max-height: 40px;
+  display:flex;
 }
 
 .row-section{
@@ -339,6 +341,11 @@ h2{
   padding-bottom:15px;
   border-bottom: 1.5px solid #4A4A4C;
 }
+.form-row{
+  width:100%;
+  display:inline-block;
+  
+}
 /*Upload page stuff*/
 .fileUpload{
   margin-left: 15px;
@@ -357,10 +364,6 @@ h2{
   margin-left:20%;
 }
 
-.rubricTable {
-  margin-top:5px;
-}
-
 .rubricHead {
   background-color:#00467F;
   text-align:center;
@@ -372,11 +375,6 @@ textarea, input{
   border-color:#00467F;
   border-width: 1px;
   /*border-radius:5px;*/
-}
-
-
-.input-group{
-  width:100%;
 }
 
 .creation-input-group{
@@ -423,7 +421,7 @@ textarea, input{
 
 .sidebtn-add{
   position:relative;
-  top:-70px;
+  top:0px;
   left:100%;
   
 }
@@ -459,3 +457,16 @@ hr {
     background-color:#365262;
     color:white;
 } */
+.markBoxStyle2{
+  font-size:40px;
+  font-weight:bold;
+  border:1.5px solid black;
+  width:11%;
+  min-height:85px;
+  
+  padding:auto;
+  
+  color:black;
+  float:left;
+}
+
